--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6, p {
+  font-size: clamp(1rem, 2vw, 2rem);
+}
 body::-webkit-scrollbar {
     width: 10px; /* Set the width of the scrollbar */
   }
@@ -18,6 +21,9 @@ body::-webkit-scrollbar {
 .navbar .hamburger-lines {
     display: none;
 }
+.navbar{
+  background-color: #3d3a50;
+}
 body {
   background-color: #EDEDED;
 }
@@ -25,6 +31,7 @@ body {
   position: fixed;
   bottom: 1em;
   right: 1em;
+  z-index: 2;
 }
 
 .circular-menu .floating-btn {
@@ -129,13 +136,14 @@ body {
     padding: 10px;
     min-width: 100%;
     max-width: 100%;
-    height: 70px;
+    height: 100px;
     overflow: hidden;
    background-color: #222222f8;
    /* border-bottom: 2px groove #151515; */
 }
 .logo {
         display: flex;
+        justify-content: center;
        position: relative;
        bottom : 40px;
 }
@@ -146,11 +154,11 @@ body {
 }
 
 .circular-menu.circular-menu-left .floating-btn {
-  background-color: hsl(217, 89%, 61%);
+  background-color: #580ef6;
 }
 
 .circular-menu.circular-menu-left:after {
-  background-color: hsl(217, 89%, 61%);
+  background-color: #580ef6;
 }
 
 .circular-menu.circular-menu-left.active .floating-btn i {
@@ -183,7 +191,7 @@ body {
     width: 3.5em;
     height: 3.5em;
     border-radius: 50%;
-    background-color: hsl(4, 98%, 60%);
+    background-color: #9d0b51;
     box-shadow: 0 2px 5px 0 hsla(0, 0%, 0%, .26);  
     color: hsl(0, 0%, 100%);
     text-align: center;
@@ -219,7 +227,7 @@ body {
     top: 0;
     right: 0;
     z-index: -2;
-    background-color: hsl(4, 98%, 60%);
+    background-color: #9d0b51;
     transition: all .3s ease;
   }
   
@@ -285,11 +293,11 @@ body {
   }
   
   .circular-menu.circular-menu-left .floating-btn {
-    background-color: hsl(217, 89%, 61%);
+    background-color: #580ef6;
   }
   
   .circular-menu.circular-menu-left:after {
-    background-color: hsl(217, 89%, 61%);
+    background-color: #580ef6;
   }
   
   .circular-menu.circular-menu-left.active .floating-btn i {
